[gd_scene load_steps=7 format=2]

[ext_resource path="res://PopupDialog.gd" type="Script" id=1]
[ext_resource path="res://download.jpeg" type="Texture" id=2]
[ext_resource path="res://map images/intersection-icon-white-background-linked-road-sign-symbol-flat-style-197194590.jpg" type="Texture" id=3]
[ext_resource path="res://traffic sign images/pure-white-background-85a2a7fd.jpg" type="Texture" id=4]
[ext_resource path="res://map images/istockphoto-1095421732-612x612.jpg" type="Texture" id=5]
[ext_resource path="res://assets/spritesheet_vehicles.png" type="Texture" id=6]

[node name="PopupDialog" type="PopupDialog"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 231.0
margin_bottom = 431.0
texture = ExtResource( 5 )

[node name="Pure-white-background-85A2A7Fd" type="Sprite" parent="."]
position = Vector2( 868, 303 )
scale = Vector2( 0.203333, 0.766667 )
texture = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.773
anchor_top = 0.641
anchor_right = 0.844
anchor_bottom = 0.648
margin_left = -176.747
margin_top = -291.347
margin_right = 29.284
margin_bottom = 128.384
alignment = 2

[node name="Intersection-icon-white-background-linked-road-sign-symbol-flat-style-197194590" type="Sprite" parent="HBoxContainer2"]
position = Vector2( 306, 265 )
scale = Vector2( 0.321, 0.298 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_right = 223.0
margin_bottom = 423.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer2/VBoxContainer"]
margin_right = 223.0
margin_bottom = 201.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU ARE HERE: 

What do you have to do 
at this traffic sign??



1.  You have preference
2.  You have to give preference
3.  Stop at this sign
4.  Go full speed ahead
"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 205.0
margin_right = 223.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 259.0
margin_right = 223.0
margin_bottom = 273.0
text = "Choose the correct option: "
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 277.0
margin_right = 223.0
margin_bottom = 327.0
rect_min_size = Vector2( 0, 50 )

[node name="Button" type="Button" parent="HBoxContainer2/VBoxContainer"]
margin_top = 331.0
margin_right = 223.0
margin_bottom = 351.0
text = "Option 1"

[node name="Button2" type="Button" parent="HBoxContainer2/VBoxContainer"]
margin_top = 355.0
margin_right = 223.0
margin_bottom = 375.0
text = "Option 2"

[node name="Button3" type="Button" parent="HBoxContainer2/VBoxContainer"]
margin_top = 379.0
margin_right = 223.0
margin_bottom = 399.0
text = "Option 3"

[node name="Button4" type="Button" parent="HBoxContainer2/VBoxContainer"]
margin_top = 403.0
margin_right = 223.0
margin_bottom = 423.0
text = "Option 4"

[node name="Sprite" type="Sprite" parent="HBoxContainer2/VBoxContainer"]
show_behind_parent = true
position = Vector2( -376, 388 )
scale = Vector2( 0.65, 0.701 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 434, 133, 70, 131 )

[node name="Download" type="Sprite" parent="HBoxContainer2/VBoxContainer/Sprite"]
position = Vector2( 75.3846, -91.2981 )
scale = Vector2( 1.53846, 1.42653 )
texture = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
